k8s/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api
spec:
  # type: ClusterIP
  type: NodePort
  # type: LoadBalancer
  ports:
    - protocol: TCP
      port: 8000
      nodePort: 30004
      targetPort: 8000
  selector:
    app: api
