k8s/db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: db
spec:
  # TODO: make cluster ip
  # type: ClusterIP
  type: NodePort
  ports:
    - nodePort: 30003
      port: 5432
      targetPort: 5432
  selector:
    app: db
