k8s/ui-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ui
spec:
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 5050
      targetPort: 5050
  selector:
    app: ui
