k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
spec:
  rules:
    - host: my-todotracker.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ui
                port:
                  number: 5050
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: api
                port:
                  number: 8000
